crates/wac-parser/tests/resolution/fail/missing-world-include-name.wac
world w1 {

}

world w2 {
    include w1 with { a as b };
}